<resources>
    <string name="app_name">Recicla+</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">A senha é muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"As permissões de contatos são necessárias para fornecer conclusões de email."
    </string>
    <color name="green">#05E39A</color>
    <color name="greenF">#05AA68</color>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">Splash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="criar_conta">Criar conta</string>
    <string name="nome_completo">Nome completo</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="cpf">CPF</string>
    <string name="endere_o">Endereço</string>
    <string name="n_mero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="telefone">Telefone</string>
    <string name="nome_do_centro_de_reciclagem">Nome do centro de reciclagem</string>
    <string name="email_da_organiza_o">Email da organização</string>
    <string name="cnpj">CNPJ</string>
</resources>
