<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context=".cadastroCentro"
    android:background="@drawable/bgrecicla">

    <TextView
        android:id="@+id/criaContaCentro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/criar_conta"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        android:layout_gravity="left"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nomeCentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_do_centro_de_reciclagem"
                android:inputType="text"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/emailCentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/email_da_organiza_o"
                android:inputType="textEmailAddress"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/cnpj"
                android:inputType="number"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/ruaCentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/endere_o"
                android:inputType="text"
                tools:ignore="MissingConstraints" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/numeroCentro"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/bairroCentro"
                    android:hint="@string/n_mero"
                    tools:ignore="MissingConstraints"
                    android:layout_alignParentLeft="true"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/bairroCentro"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="34dp"
                    android:hint="@string/bairro"
                    android:inputType="text"
                    tools:ignore="MissingConstraints"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <EditText
                android:id="@+id/cepCentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/cep"
                android:inputType="number"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/telefoneCentro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/telefone"
                android:inputType="phone"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/buttonCadCentro"
                android:layout_width="61dp"
                android:layout_height="64dp"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:clickable="true"
                app:srcCompat="@drawable/ic_check_circle_black_24dp"
                tools:ignore="MissingConstraints,VectorDrawableCompat" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>